2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test-template.dot: Add a MS Word template file mime-type
	and the requires test suite entry

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* tests/README.pdf:
	* tests/list: Add test case for bug #15436 (README* taking precedence
	over *.pdf)

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: error out when one of the tests fails

	* freedesktop.org.xml.in: Fix matchlet for application/x-java,
	patch by David Faure <faure@kde.org> (Closes: #10334)

	* tests/helloworld.java (helloworld), (helloworld.main):
	* tests/list:
	* tests/test.class: Add test case for Class and Java source files

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.alz: Add application/x-alz for ALZ archives, patch by
	Changwoo Ryu <cwryu@debian.org> (Closes: #14909)

2008-04-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove application/x-cgi mime-type, it's
	not text/plain (could be a binary), so it should be handled as its
	real type, as discovered by sniffing (Closes: #13700)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add another magic pattern for FLAC files
	inside Ogg, patch by Andrés Gómez García <agomez@igalia.com>
	(Closes: #14501)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove *.exe as a pattern for Unix/ELF
	executables (Closes: #12569)

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a pattern for AWK files

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a pattern for mbox files, as used
	by KMail

2008-04-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list: Add a pattern for PCX files, fix the test suite
	accordingly

2008-04-09  Bastien Nocera  <hadess@hadess.net>
