@@ -415,6 +415,13 @@ command to generate the output files.
     <_comment>Word template</_comment>
     <glob pattern="*.dot"/>
   </mime-type>
+  <mime-type type="application/gnunet-directory">
+    <_comment>GNUnet search file</_comment>
+    <magic priority="50">
+      <match type="string" value="\211GND\r\n\032\n" offset="0"/>
+    </magic>
+    <glob pattern="*.gnd"/>
+  </mime-type>
   <mime-type type="application/vnd.ms-tnef">
     <_comment>TNEF message</_comment>
     <acronym>TNEF</acronym>
